--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,48 @@
-# AI & Computer Vision (Raspberry Pi)
-ultralytics>=8.0.0          # YOLOv8-nano for fruit detection
-opencv-python>=4.8.0        # Image preprocessing
-tflite-runtime>=2.14.0      # TensorFlow Lite for MobileNetV2
-numpy>=1.24.0               # Numerical operations
-pillow>=10.0.0              # Image handling
+# ============================================
+# AI Fruit Sorting System - Python Dependencies
+# For Raspberry Pi 4 (8GB RAM)
+# ============================================
 
-# Raspberry Pi Hardware Control
-picamera2>=0.3.0            # Camera interface for Raspberry Pi
-RPi.GPIO>=0.7.1             # GPIO control for hardware
-gpiozero>=2.0.0             # Simplified GPIO interface
+# Core Dependencies
+numpy>=1.21.0
+pillow>=9.0.0
+pyyaml>=6.0
+loguru>=0.6.0
+
+# Computer Vision
+opencv-python>=4.5.0
+
+# AI Models
+ultralytics>=8.0.0
+
+# TensorFlow Lite (for MobileNetV2)
+# Use tflite-runtime for lighter installation
+tflite-runtime>=2.5.0; platform_machine == "armv7l" or platform_machine == "aarch64"
+# Fallback to full tensorflow if tflite-runtime not available
+tensorflow>=2.10.0; platform_machine != "armv7l" and platform_machine != "aarch64"
+
+# Hardware Control (Raspberry Pi specific)
+RPi.GPIO>=0.7.0; platform_machine == "armv7l" or platform_machine == "aarch64"
+gpiozero>=1.6.0; platform_machine == "armv7l" or platform_machine == "aarch64"
+picamera2>=0.3.0; platform_machine == "armv7l" or platform_machine == "aarch64"
 
 # Web Interface
-flask>=3.0.0                # Web framework
-flask-cors>=4.0.0           # CORS support
-flask-socketio>=5.3.0       # Real-time communication
-python-socketio>=5.10.0     # SocketIO client
-eventlet>=0.33.0            # Async server
-
-# Utilities
-pyyaml>=6.0                 # Configuration files
-python-dotenv>=1.0.0        # Environment variables
-loguru>=0.7.0               # Enhanced logging
+flask>=2.0.0
+flask-cors>=3.0.0
+flask-socketio>=5.0.0
+python-socketio>=5.0.0
+eventlet>=0.33.0
 
 # ============================================
-# Training Dependencies (PC/Laptop with GPU)
-# Install these ONLY on training machine, NOT on Raspberry Pi
+# Optional/Development Dependencies
+# (Install separately if needed)
 # ============================================
-# torch>=2.0.0                # PyTorch for YOLOv8 training
-# torchvision>=0.15.0         # Vision utilities
-# tensorflow>=2.14.0          # TensorFlow for MobileNetV2
-# matplotlib>=3.7.0           # Visualization
-# scikit-learn>=1.3.0         # Metrics and evaluation
-# labelImg                    # YOLO annotation tool
+
+# Training tools (only needed for training on Pi)
+# torch>=1.10.0
+# torchvision>=0.11.0
+# matplotlib>=3.5.0
+# scikit-learn>=1.0.0
+
+# Annotation tool
+# labelImg>=1.8.0
