--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,19 @@ opencv-python>=4.5.0
 ultralytics>=8.0.0
 
 # TensorFlow Lite (for MobileNetV2)
-# Use tflite-runtime for lighter installation
-tflite-runtime>=2.5.0; platform_machine == "armv7l" or platform_machine == "aarch64"
-# Fallback to full tensorflow if tflite-runtime not available
-tensorflow>=2.10.0; platform_machine != "armv7l" and platform_machine != "aarch64"
+# Use tflite-runtime for lighter installation on Pi
+tflite-runtime>=2.5.0
 
 # Hardware Control (Raspberry Pi specific)
-RPi.GPIO>=0.7.0; platform_machine == "armv7l" or platform_machine == "aarch64"
-gpiozero>=1.6.0; platform_machine == "armv7l" or platform_machine == "aarch64"
-picamera2>=0.3.0; platform_machine == "armv7l" or platform_machine == "aarch64"
+# NOTE: These should be installed via apt on Raspberry Pi OS:
+#   sudo apt install python3-rpi.gpio python3-gpiozero python3-picamera2
+# The packages below are fallbacks if apt packages aren't available
+RPi.GPIO>=0.7.0
+gpiozero>=1.6.0
+
+# IMPORTANT: picamera2 requires libcamera which must be installed via apt:
+#   sudo apt install python3-libcamera python3-picamera2
+# Do NOT install picamera2 via pip if using system Python or venv with --system-site-packages
 
 # Web Interface
 flask>=2.0.0
