--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Archive files (deployment packages)
+*.tar.gz
+*.zip
+*.tar
+*.rar
+*.7z
+conveyor_pi.tar.gz
+conveyor_pi.zip
